<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">preely</string>
    <string name="username">Username</string>
    <string name="client_id">1080272614668-2id7ppmb6konpbps55epd6qf9158p1b5.apps.googleusercontent.com</string>


    <string name="facebook_app_id">1274291724291780</string>
    <string name="fb_login_protocol_scheme">fb1274291724291780</string>
    <string name="facebook_client_token">b591e53c66bb8cdfdf13e8e6b3b08e53</string>
    <string name="sort_filter"><![CDATA[Sort & Filter]]></string>

    <string name="save_post_button">Save or unsave this furniture item</string>
    <string name="navigate_back">Navigate back to previous screen</string>
    <string name="search_saved_posts">Search through saved posts</string>
    <string name="desc_icon">Icon</string>
    <string name="desc_arrow">Arrow</string>
    <string name="setting_title">Setting Title</string>
    <string name="setting_subtitle">Setting Subtitle</string>
    <string name="logout">Logout</string>
    <string name="edit_avatar">Edit profile picture</string>
    <string name="edit_profile_icon">Edit profile icon</string>
    <string name="address_icon">Address icon</string>
    <string name="notification_icon">Notification icon</string>
    <string name="payment_icon">Payment icon</string>
    <string name="security_icon">Security icon</string>
    <string name="language_icon">Language icon</string>
    <string name="dark_mode_icon">Dark mode icon</string>
    <string name="privacy_policy_icon">Privacy policy icon</string>
    <string name="help_center_icon">Help center icon</string>
    <string name="invite_friends_icon">Invite friends icon</string>
    <string name="logout_icon">Logout icon</string>
    <string name="navigate_forward">Navigate forward</string>
    <string name="home_icon">Home icon</string>
    <string name="cart_icon">Cart icon</string>
    <string name="orders_icon">Orders icon</string>
    <string name="wallet_icon">Wallet icon</string>
    <string name="profile_icon">Profile icon</string>
    <string name="profile_name">Andrew Ainsley</string>
    <string name="profile_phone">+1 111 467 378 399</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="address">Address</string>
    <string name="notification">Notification</string>
    <string name="payment">Payment</string>
    <string name="security">Security</string>
    <string name="language">Language</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="help_center">Help Center</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="language_value">English (US)</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="orders">Orders</string>
    <string name="wallet">Wallet</string>
    <string name="profile">Profile</string>

    <string name="create_transaction">Create Escrow Transaction</string>
    <string name="transaction_title">Create Escrow Transaction</string>
    <string name="select_giver">Select recipient (giver)</string>
    <string name="select_post">Select post</string>
    <string name="enter_amount">Amount</string>
    <string name="status_unpaid">Status: Unpaid</string>
    <string name="transaction_date">Transaction date: %1$s</string>
    <string name="pay_with_vnpay">Pay with VNPay</string>
    <string name="loading_data">Loading data...</string>
    <string name="please_login_again">Please log in again!</string>
    <string name="no_users_to_select">No users to select!</string>
    <string name="cannot_load_users">Cannot load user list</string>
    <string name="no_posts_to_select">No posts to select!</string>
    <string name="cannot_load_posts">Cannot load post list</string>
    <string name="select_giver_first">Please select a recipient first!</string>
    <string name="select_post_first">Please select a post first!</string>
    <string name="no_posts_for_giver">This user has no posts yet!</string>
    <string name="please_select_giver">Please select a recipient!</string>
    <string name="please_select_post">Please select a post!</string>
    <string name="please_enter_amount">Please enter the amount!</string>
    <string name="invalid_amount">Invalid amount!</string>
    <string name="create_transaction_error">Error creating transaction: %1$s</string>
    <string name="order_info">Escrow transaction for post: %1$s</string>
    <string name="status_paid">Status: Paid</string>
    <string name="status_failed">Status: Failed</string>
    <string name="payment_result">Payment result: %1$s</string>
    <string name="error_selecting_user">Error selecting user</string>
    <string name="error_selecting_post">Error selecting post</string>
    <string name="no_posts_found_for_giver">This user has no posts yet!</string>
    <string name="no_services_found_for_giver">This user has no services yet!</string>
    <string name="menu_users">Users</string>
    <string name="menu_posts">Posts</string>
    <string name="menu_images">Images</string>
    <string name="menu_transactions">Transactions</string>
    <string name="menu_categories">Categories</string>
    <string name="menu_tags">Tags</string>
    <string name="title_user_management">User Management</string>
    <string name="title_post_management">Post Management</string>
    <string name="title_image_management">Image Management</string>
    <string name="title_transaction_management">Transaction Management</string>
    <string name="title_category_management">Category Management</string>
    <string name="title_tag_management">Tag Management</string>
    <string name="editPhone">Số điện thoại</string>
    <string name="google_maps_key" translatable="false">AIzaSyDv7k0i13euDi8VBhsBSXy2TT-A7g0xBRg</string>
    <string name="Address">Địa chỉ</string>
    <string name="hint_full_name">Họ và tên</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="phone_text">+1 111*****99</string>
    <string name="hint_username">Tên đăng nhập</string>
    <string name="hint_email">Email</string>
    <!--    <string name="app_name" tools:ignore="DuplicateDefinition">DropdownDemo</string>-->
    <string name="hint_phone">Số điện thoại</string>
    <string name="hint_address">Địa chỉ</string>
    <string name="hint_province">Tỉnh/Thành phố</string>
    <string name="hint_ward">Phường/Xã</string>
    <string name="feedback">Đánh giá: 0.0</string>
    <string name="saveBtn">Save</string>
    <string name="menu_settings">Setting</string>
    <string name="BackBtn">Back</string>
    <string name="select_service">Select service</string>
    <string name="no_services_to_select">No services to select!</string>
    <string name="error_selecting_service">Error selecting service</string>
    <string name="please_select_service">Please select a service!</string>
    <string name="change_password">Change Password</string>
    <string name="saved_services">Saved Services</string>

    <string-array name="items_array">
        <item>Apple</item>
        <item>Banana</item>
        <item>Cherry</item>
        <item>Date</item>
        <item>Elderberry</item>
    </string-array>
    <string name="category">Category</string>
    <string name="sort_by">Sort by</string>
    <string name="status">Status</string>
</resources>