<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_account"
        android:title="Home" />
    
    <item
        android:id="@+id/navigation_users"
        android:icon="@drawable/ic_account"
        android:title="@string/menu_users" />
    
    <item
        android:id="@+id/navigation_posts"
        android:icon="@drawable/ic_edit"
        android:title="@string/menu_posts" />
    
    <item
        android:id="@+id/navigation_transactions"
        android:icon="@drawable/ic_account"
        android:title="@string/menu_transactions" />
    
    <item
        android:id="@+id/navigation_management"
        android:icon="@drawable/ic_edit"
        android:title="More" />
</menu> 